--- a/vista/css/styles_oscar.css
+++ b/vista/css/styles_oscar.css
@@ -5,6 +5,90 @@
     box-sizing: border-box;
 }
 
+/*INDEX*/
+/* Header */
+.header {
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: white;
+    border-bottom: 1px solid #ddd;
+}
+
+.logo img {
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+}
+
+.header h1 {
+    font-size: 20px;
+    color: #333;
+    margin: 0;
+}
+
+/* Main Content */
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../img/fondosLogos/fondo.jpg");
+    background-position: center;
+    background-size: contain;
+}
+
+.hero-section {
+    text-align: center;
+    background: rgba(255, 255, 255, 0.492);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.main-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 10px;
+}
+
+.subtitle {
+    font-size: 1.2rem;
+    color: #444;
+    margin-bottom: 20px;
+}
+
+.register-btn {
+    display: inline-block;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.register-btn:hover {
+    background-color: #666;
+}
+
+.login-link {
+    margin-top: 15px;
+    font-size: 1rem;
+    color: #555;
+}
+
+.login-link a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.login-link a:hover {
+    text-decoration: underline;
+}
+
 /*VISTAS*/
 
 h3 {
