mostrar detalles de actividades listo  lucia

--- a/vista/css/styles lucia.css
+++ b/vista/css/styles lucia.css
@@ -798,7 +798,7 @@ input[type="text"], input[type="file"], input[type="url"] {
 
 .actividad-descripcion {
     margin: 15px 0;
-    color: #8bc34a;
+    color: #F9FBE7;
     font-size: 14px;
 }
 
