--- a/vista/css/styles_oscar.css
+++ b/vista/css/styles_oscar.css
@@ -7,39 +7,51 @@
 
 /*INDEX*/
 /* Header */
-.header {
+.header-index {
     display: flex;
     align-items: center;
+    width: 100%;
+    height: 100px;
     padding: 10px 20px;
-    background-color: white;
-    border-bottom: 1px solid #ddd;
+    background-color: #8bc34a;
+
 }
 
-.logo img {
-    width: 60px;
-    height: 60px;
-    margin-right: 10px;
+.logo-index img {
+    width: 80px;
+    height: 80px;
+    margin-right: 20px;
 }
 
-.header h1 {
-    font-size: 20px;
+.header-index h1 {
+    font-size: 50px;
     color: #333;
+    align-items: center;
     margin: 0;
+    justify-content: center;
+    text-align: center;
 }
 
 /* Main Content */
 .main-content {
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: calc(100vh - 100px - 50px));
     background-image: url("../img/fondosLogos/fondo.jpg");
     background-position: center;
-    background-size: contain;
+    background-size: cover;
+    
 }
 
 .hero-section {
     text-align: center;
-    background: rgba(255, 255, 255, 0.492);
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    background: rgba(255, 255, 255, 0.7);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -48,19 +60,20 @@
 .main-title {
     font-size: 2.5rem;
     font-weight: bold;
-    color: #000;
+    color: #a9401d;
     margin-bottom: 10px;
 }
 
 .subtitle {
     font-size: 1.2rem;
-    color: #444;
+    color: #212121;
+    text-decoration: solid;
     margin-bottom: 20px;
 }
 
 .register-btn {
     display: inline-block;
-    background-color: black;
+    background-color: #a9401d;
     color: white;
     text-decoration: none;
     font-size: 1.2rem;
@@ -70,7 +83,7 @@
 }
 
 .register-btn:hover {
-    background-color: #666;
+    background-color: #ff5722;
 }
 
 .login-link {
@@ -279,7 +292,6 @@ footer {
     font-size: 14px;
     width: 100%;
     position: relative;
-    margin-top: 20px;
 }
 
 /* Footer and Register Footer */
@@ -288,8 +300,8 @@ footer {
     margin-top: 20px;
 }
 
-.link-sub {
-    color: #ff5722;
+.login-link {
+    color: black;
     font-weight: bold;
     text-decoration: none;
 }
