--- a/vista/css/styles_oscar.css
+++ b/vista/css/styles_oscar.css
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: calc(100vh - 100px - 50px));
+    height: calc(100vh - 100px - 50px);
     background-image: url("../img/fondosLogos/fondo.jpg");
     background-position: center;
     background-size: cover;
