--- a/vista/css/styles lucia.css
+++ b/vista/css/styles lucia.css
@@ -1360,3 +1360,139 @@ Próximas Tareas
     border-radius: 5px;
     cursor: pointer;
 }
+
+
+/* SECCIÓN MI SUSCRIPCIÓN */
+
+/* Contenedor principal */
+.mi-suscripcion {
+    padding: 20px;
+    background-color: #F9FBE7;
+    width: 90%;  /* Cambiar de 100% a 90% para mejorar el ajuste en pantalla */
+    max-width: 600px;  /* Añadir un límite máximo de ancho para pantallas grandes */
+    margin: 0 auto;  /* Centrar el contenedor principal */
+}
+
+.mi-suscripcion h2{
+   text-align: center;
+}
+
+.mi-suscripcion h3{
+    color: #A9401D;
+}
+
+.mi-suscripcion h4{
+    text-align: center;
+}
+
+
+/* Sección Detalles suscripción */
+.detalles-suscripcion {
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 600px;
+    margin: 20px auto;
+}
+
+
+/*Sección método pago*/
+.modulo-pago {
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 600px;
+    margin: 20px auto;
+}
+
+label {
+    display: block;
+    margin-top: 20px;
+    width: 300px;
+}
+
+input[type="text"], input[type="email"], select {
+    padding: 10px;
+    background-color: white;
+    margin-top: 5px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 40%;
+}
+
+select {
+    width: 45%;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.formulario-pago {
+    margin-top: 20px;
+}
+
+
+/* Sección Gestión de la suscripción */
+*{
+    box-sizing: border-box;
+}
+.gestion-suscripcion {
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 600px;
+    margin: 20px auto;
+}
+
+/* Botones*/
+.boton, .btn-suscripcion {
+    background-color: #A9401D;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.btn-activar, .btn-pausar, .btn-cancelar {
+    background-color: #A9401D;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    display: flex;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 10px;
+    width: 170px;
+}
+
+.btn-activar:hover {
+    background-color: rgb(11, 240, 11);
+    color: black;
+}
+
+.btn-pausar:hover {
+    background-color:rgb(255, 217, 0);
+    color: black;
+}
+
+.btn-cancelar:hover {
+    background-color:rgb(255, 57, 57);
+    color: black;
+}
+
+.btn:hover, .boton:hover, .btn-suscripcion:hover {
+    background-color: #ff5722;
+    color: black;
+}
+
